# tensorflow_serving_sample

./: README.md  buid_local_saver.sh  pyproject.toml  sample_model.ipynb
.ipynb_checkpoints/: README-checkpoint.md  body-checkpoint.json  buid_local_saver-checkpoint.sh  sample_model-checkpoint.ipynb
src/.ipynb_checkpoints/: batch-checkpoint.config  models-checkpoint.config
src/sample_model/000123/: fingerprint.pb  saved_model.pb
src/sample_model/000123/variables/: variables.data-00000-of-00001
src/sample_model/00123/: fingerprint.pb  saved_model.pb
src/sample_model/00123/variables/: variables.index
